--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -1,24 +1,36 @@
-{%extends 'base.html'%}
-
-{%block content%}
+{%extends 'base.html'%} {%block content%}
 <div class="col-md-6 offset-md-3">
-    <h1>Login</h1>
-    <form action="" method="post">
-        {%csrf_token%}
-        
-            <div class="mb-3">
-              <label for="exampleInputEmail1" class="form-label">username</label>
-              <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+  {% if user.is_authenticated %}
 
-            </div>
-            <div class="mb-3">
-              <label for="exampleInputPassword1" class="form-label">Password</label>
-              <input type="password" class="form-control" id="exampleInputPassword1">
-            </div>
-              <button type="submit" class="btn btn-primary">Submit</button>
-         
-    </form>
-    
+  <h1>this is your form</h1>
+
+  {% else %}
+
+  <h1>Login</h1>
+
+  <form action="{% url 'home'%}" method="post">
+    {%csrf_token%}
+
+    <div class="mb-3">
+      <label for="exampleInputEmail1" class="form-label">username</label>
+      <input
+        type="text"
+        class="form-control"
+        placeholder="Enter your username"
+        name="username"
+      />
+    </div>
+    <div class="mb-3">
+      <label for="exampleInputPassword1" class="form-label">Password</label>
+      <input
+        type="password"
+        class="form-control"
+        placeholder="Enter your password"
+        name="password"
+      />
+    </div>
+    <button type="submit" class="btn btn-primary">Submit</button>
+  </form>
 </div>
 
-{%endblock%}
+{%endif%} {%endblock%}
