--- a/website/templates/navbar.html
+++ b/website/templates/navbar.html
@@ -14,9 +14,17 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNavDropdown">
       <ul class="navbar-nav">
+        {%if user.is_authenticated%}
+
         <li class="nav-item">
-          <a class="nav-link" href="#">Features</a>
+          <a class="nav-link" href="{%url 'logout_user' %}">Logout</a>
         </li>
+        {%else%}
+        <li class="nav-item">
+          <a class="nav-link" href="{%url 'home'%}">Login</a>
+        </li>
+        {%endif%}
+
       </ul>
     </div>
   </div>
